# tiny-deploy

./: README.md
backend/: Cargo.toml
backend/examples/: bundle.rs
backend/src/: lib.rs
backend/src/bundler/: config.rs  config_file.rs  loader.rs  minify.rs  mod.rs  options.rs  output.rs
backend/src/bundler/utils/: mod.rs
backend/src/bundler/utils/loader/: mod.rs  universal_loader.rs
backend/src/bundler/utils/store/: fs_store.rs
backend/src/utils/: compressible.rs  mod.rs
backend/src/utils/loader/: mod.rs  universal_loader.rs
backend/src/utils/store/: fs_store.rs
backend/templates/: layout.j2
